2017-02-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/arglists.h: Move Doxygen mainpage configuration here now that
	nasl/nasl.h has moved to openvas-scanner.

2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* doc/Doxyfile_full.in: Remove ALIASES referred	to the nasl
	docs generation.

	* ChangeLog: Correction of a false entry.

2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* doc/Doxyfile.in: Remove ALIASES and INPUT referred
	to the nasl docs generation.

	* doc/Doxyfile_full.in: Remove INPUT referred
	to the nasl docs generation.

2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* doc/signatures-howto.txt: Moved to openvas-scanner

2017-02-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* libopenvas_nasl.pc.in: Removed. No longer requiered.

	* COPYING: Delete entries related to nasl submodule.

2017-02-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (open_stream_connection_ext): Define hostname variable
	outside the switch block as it may not be initialized within it.

2017-02-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Moving nasl library to opevas-scanner as nasl submodule.

	* doc/openvas-nasl.1, doc/openvas-nasl-lint.1,
	nasl/, nasl/arc4.c, nasl/build, nasl/byteorder.h, nasl/capture_packet.c,
	nasl/capture_packet.h, nasl/ChangeLog-pre-09-2009, nasl/charcnv.c,
	nasl/charset.h, nasl/CMakeLists.txt, nasl/exec.c, nasl/exec.h,
	nasl/genrand.c, nasl/hmacmd5.c, nasl/hmacmd5.h, nasl/iconv.c, nasl/iconv.h,
	nasl/lint.c, nasl/md4.c, nasl/md4.h, nasl/md5.c, nasl/md5.h,
	nasl/nasl_builtin_find_service.c, nasl/nasl_builtin_nmap.c,
	nasl/nasl_builtin_openvas_tcp_scanner.c, nasl/nasl_builtin_plugins.h,
	nasl/nasl_builtin_synscan.c, nasl/nasl.c, nasl/nasl_cert.c, nasl/nasl_cert.h,
	nasl/nasl_cmd_exec.c, nasl/nasl_cmd_exec.h, nasl/nasl_crypto2.c,
	nasl/nasl_crypto2.h, nasl/nasl_crypto.c, nasl/nasl_crypto.h,
	nasl/nasl_debug.c, nasl/nasl_debug.h, nasl/nasl_func.c, nasl/nasl_func.h,