@@ -57,30 +57,4 @@
 #define ACT_SCANNER             1
 #define ACT_INIT                0
 
-#define ACT_STRING_INIT                "init"
-#define ACT_STRING_SCANNER             "scanner"
-#define ACT_STRING_SETTINGS            "settings"
-#define ACT_STRING_GATHER_INFO         "infos"
-#define ACT_STRING_ATTACK              "attack"
-#define ACT_STRING_MIXED_ATTACK        "mixed"
-#define ACT_STRING_DESTRUCTIVE_ATTACK  "destructive_attack"
-#define ACT_STRING_DENIAL              "denial"
-#define ACT_STRING_KILL_HOST           "kill_host"
-#define ACT_STRING_FLOOD               "flood"
-#define ACT_STRING_END                 "end"
-#define ACT_STRING_UNKNOWN             "unknown"
-
-#define ACT_STRING_LIST_ALL     ACT_STRING_INIT ,               \
-                                ACT_STRING_SCANNER ,            \
-                                ACT_STRING_SETTINGS ,           \
-                                ACT_STRING_GATHER_INFO ,        \
-                                ACT_STRING_ATTACK ,             \
-                                ACT_STRING_MIXED_ATTACK ,       \
-                                ACT_STRING_DESTRUCTIVE_ATTACK , \
-                                ACT_STRING_DENIAL ,             \
-                                ACT_STRING_KILL_HOST ,          \
-                                ACT_STRING_FLOOD ,              \
-                                ACT_STRING_END ,                \
-                                ACT_STRING_UNKNOWN
-
 #endif /* _NVT_CATEGORIES_H */
